Fix commpents visibilyti

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .primary-background {
   @apply bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500;
 }
 
 .drawer-side {
   position: fixed !important;
-  @apply w-full;
 }
